# eventsourcing

./: Cargo.toml  README.md
eventsourcing-derive/: Cargo.toml
eventsourcing-derive/src/: lib.rs
examples/: bank.rs  dispatch.rs  location.rs
examples/combat/: domain.rs  main.rs
src/: cloudevents.rs  lib.rs  prelude.rs
src/eventstore/: inmemory.rs  mod.rs  orgeventstore.rs
tests/: cloudevents.rs
