[package]
name = "eventsourcing"
version = "0.1.0"
authors = ["autodidaddict <alothien@gmail.com>"]
description = "Event Sourcing for Rust"
documentation = "https://docs.rs/eventsourcing"
repository = "https://github.com/pholactery/eventsourcing"
keywords = ["event", "eventsourcing", "aggregate", "projector"]
categories = ["asynchronous","data-structures","rust-patterns","simulation"]
readme = "README.md"
license = "MPL-2.0"
homepage = "https://github.com/pholactery/eventsourcing"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"